# artdeco

./: .gitignore  Dockerfile  alembic.ini  database.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test_on_push.yaml
admin/: catalog.py  portfolio.py
alembic/: env.py
alembic/versions/: 7edddb5d9228_create_model_catalogimage.py  cce5f767edb5_create_portfolio_and_portfolioimage_.py  da884150e3c8_catalog_model_add_image_url_column.py  e458bfdc5498_create_catalog_model.py
models/: __init__.py  catalog.py  portfolio.py
routers/: catalog.py  portfolio.py
schemas/: catalog.py  portfolio.py
tests/: test_catalog.py
